--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,21 +13,21 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.02.02"
+composeBom = "2024.03.00"
 lifecycleViewmodelCompose = "2.7.0"
 mapsCompose = "4.3.3"
 material3 = "1.2.1"
 material3Adaptive = "1.0.0-alpha06"
-material3AdaptiveNavigationSuite = "1.0.0-alpha03" #1.0.0-alpha04 has duplicate class
-materialIconsExtended = "1.6.3"
+material3AdaptiveNavigationSuite = "1.0.0-alpha03" #1.0.0-alpha04 and 1.0.0-alpha05 has duplicate class
+materialIconsExtended = "1.6.4"
 navigationCompose = "2.7.7"
 googleServices = "4.4.1"
 firebaseAuth = "22.3.1"
-firebaseFirestore = "24.10.3"
+firebaseFirestore = "24.11.0"
 firebaseStorage = "20.3.0"
 playServicesAuth = "21.0.0"
 firebaseMessaging = "23.4.1"
-places = "3.3.0"
+places = "3.4.0"
 secretsGradlePlugin = "2.0.1"
 
 [libraries]
