--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 accompanistPermissions = "0.31.1-alpha"
 agp = "8.3.1"
 coilCompose = "2.4.0"
+daraja = "2.0.2"
 datastorePreferences = "1.0.0"
 hiltAndroid = "2.50"
 hiltCompilerVersion = "1.2.0"
@@ -40,6 +41,7 @@ androidx-material-icons-extended = { module = "androidx.compose.material:materia
 androidx-material3-adaptive = { module = "androidx.compose.material3:material3-adaptive", version.ref = "material3Adaptive" }
 androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavigationSuite" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+daraja = { module = "com.androidstudy.daraja:daraja", version.ref = "daraja" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
