--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,38 @@
 [versions]
 accompanistPermissions = "0.31.1-alpha"
-agp = "8.3.1"
-coilCompose = "2.4.0"
+agp = "8.3.2"
+coilCompose = "2.7.0"
 daraja = "2.0.2"
-datastorePreferences = "1.0.0"
+datastorePreferences = "1.1.1"
 hiltAndroid = "2.50"
 hiltCompilerVersion = "1.2.0"
 hiltNavigationCompose = "1.2.0"
-kotlin = "1.9.20"
-coreKtx = "1.12.0"
+kotlin = "2.0.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2024.03.00"
-lifecycleViewmodelCompose = "2.7.0"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.4"
+activityCompose = "1.9.1"
+composeBom = "2024.08.00"
+lifecycleViewmodelCompose = "2.8.4"
 mapsCompose = "4.3.3"
 material3 = "1.2.1"
 material3Adaptive = "1.0.0-alpha06"
-material3AdaptiveNavigationSuite = "1.0.0-alpha03" #1.0.0-alpha04 and 1.0.0-alpha05 has duplicate class
-materialIconsExtended = "1.6.4"
+material3AdaptiveNavigationSuite = "1.0.0-alpha07" #1.0.0-alpha04 and 1.0.0-alpha05 has duplicate class
+material3WindowSizeClass = "1.2.1"
+materialIconsExtended = "1.6.8"
 navigationCompose = "2.7.7"
-googleServices = "4.4.1"
-firebaseAuth = "22.3.1"
-firebaseFirestore = "24.11.0"
-firebaseStorage = "20.3.0"
-playServicesAuth = "21.0.0"
-firebaseMessaging = "23.4.1"
-places = "3.4.0"
+googleServices = "4.4.2"
+firebaseAuth = "23.0.0"
+firebaseFirestore = "25.1.0"
+firebaseStorage = "21.0.0"
+playServicesAuth = "21.2.0"
+firebaseMessaging = "24.0.1"
+places = "3.5.0"
 secretsGradlePlugin = "2.0.1"
-googleGmsGoogleServices = "4.4.1"
-firebaseFunctions = "20.4.0"
+googleGmsGoogleServices = "4.4.2"
+firebaseFunctions = "21.0.0"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -42,6 +43,7 @@ androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-com
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-material3-adaptive = { module = "androidx.compose.material3:material3-adaptive", version.ref = "material3Adaptive" }
 androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavigationSuite" }
+androidx-material3-window-size = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 daraja = { module = "com.androidstudy.daraja:daraja", version.ref = "daraja" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
@@ -76,5 +78,5 @@ firebase-functions = { group = "com.google.firebase", name = "firebase-functions
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
-
