--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,33 @@
 [versions]
-accompanistPermissions = "0.31.1-alpha"
+accompanistPermissions = "0.37.3"
 agp = "8.12.2"
 coilCompose = "2.7.0"
 daraja = "2.0.2"
-datastorePreferences = "1.1.1"
-hiltAndroid = "2.50"
+datastorePreferences = "1.1.7"
+hiltAndroid = "2.57.1"
 hiltCompilerVersion = "1.2.0"
 hiltNavigationCompose = "1.2.0"
-kotlin = "2.0.0"
-coreKtx = "1.13.1"
+kotlin = "2.2.10"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.9.3"
+activityCompose = "1.10.1"
 composeBom = "2024.08.00"
-lifecycleViewmodelCompose = "2.8.4"
-mapsCompose = "4.3.3"
-material3 = "1.2.1"
-material3Adaptive = "1.0.0-alpha06"
-material3WindowSizeClass = "1.2.1"
-materialIconsExtended = "1.6.8"
-navigationCompose = "2.7.7"
-googleServices = "4.4.2"
-firebaseAuth = "23.0.0"
-firebaseFirestore = "25.1.0"
-firebaseStorage = "21.0.0"
-playServicesAuth = "21.2.0"
-firebaseMessaging = "24.0.1"
-places = "3.5.0"
+lifecycleViewmodelCompose = "2.9.3"
+mapsCompose = "6.7.2"
+material3 = "1.3.2"
+material3WindowSizeClass = "1.3.2"
+materialIconsExtended = "1.7.8"
+navigationCompose = "2.9.3"
+googleServices = "4.4.3"
+firebaseBom = "34.2.0"
+playServicesAuth = "21.4.0"
+places = "4.4.1"
 secretsGradlePlugin = "2.0.1"
-googleGmsGoogleServices = "4.4.2"
-firebaseFunctions = "21.0.0"
+googleGmsGoogleServices = "4.4.3"
+foundation = "1.9.0"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -40,7 +36,6 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompilerVersion" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
-androidx-material3-adaptive = { module = "androidx.compose.material3:material3-adaptive", version.ref = "material3Adaptive" }
 androidx-material3-window-size = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 daraja = { module = "com.androidstudy.daraja:daraja", version.ref = "daraja" }
@@ -64,14 +59,17 @@ maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = 
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 navigation-compose = { module = " androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
-firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
-firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
-firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
-firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
+firebase-storage = { module = "com.google.firebase:firebase-storage" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging" }
+firebase-functions = { module = "com.google.firebase:firebase-functions" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 places = { module = "com.google.android.libraries.places:places", version.ref = "places" }
 secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
-firebase-functions = { group = "com.google.firebase", name = "firebase-functions", version.ref = "firebaseFunctions" }
+androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
