--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ datastorePreferences = "1.1.7"
 hiltAndroid = "2.57.1"
 hiltCompilerVersion = "1.2.0"
 hiltNavigationCompose = "1.2.0"
+devtoolsKsp = "2.2.10-2.0.2"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -14,7 +15,7 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.3"
 activityCompose = "1.10.1"
-composeBom = "2024.08.00"
+composeBom = "2025.08.01"
 lifecycleViewmodelCompose = "2.9.3"
 mapsCompose = "6.7.2"
 material3 = "1.3.2"
@@ -25,7 +26,7 @@ googleServices = "4.4.3"
 firebaseBom = "34.2.0"
 playServicesAuth = "21.4.0"
 places = "4.4.1"
-secretsGradlePlugin = "2.0.1"
+secrets = "2.0.1"
 googleGmsGoogleServices = "4.4.3"
 foundation = "1.9.0"
 
@@ -68,11 +69,14 @@ firebase-messaging = { module = "com.google.firebase:firebase-messaging" }
 firebase-functions = { module = "com.google.firebase:firebase-functions" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 places = { module = "com.google.android.libraries.places:places", version.ref = "places" }
-secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
+google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
+google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "devtoolsKsp" }
+secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secrets" }
